:lipstick: add background color to variables

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 /* COLORS */
 $primarycolor : rgb(26, 26, 45);
+$backgroundcolor : rgb(20, 29, 40);
 $white: rgb(242, 242, 242);
 $grey: rgb(156, 156, 156);
 $orange: rgb(244, 110, 85);
