--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,9 +6,11 @@ $white: rgb(242, 242, 242);
 $grey: rgb(189, 189, 189);
 $orange: rgb(244, 110, 85);
 $orange-dark: rgbargb(244, 110, 85, 0.8);
-$highlight: rgb(28, 33, 42);
+$orange-seethrough: rgba(246, 109, 79, 0.15);
+$highlight: rgb(29, 37, 48);
 $form: rgb(43, 48, 56);
-$shadow: rgba(0, 0, 0, 0.27);
+$shadow: rgba(0, 0, 0, 0.20);
+
 
 /* FONTS  */
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap');
